# ChangeLog for media-sound/banshee
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/banshee/ChangeLog,v 1.14 2006/02/13 12:00:03 metalgod Exp $

*banshee-0.10.6 (13 Feb 2006)

  13 Feb 2006; Luis Medinas <metalgod@gentoo.org> +banshee-0.10.6.ebuild:
  Version Bump.

*banshee-0.10.5-r1 (08 Feb 2006)

  08 Feb 2006; Luis Medinas <metalgod@gentoo.org> +banshee-0.10.5-r1.ebuild:
  Added a patch from upstream cvs to fix several issues with notification area
  specially on amd64.

  07 Feb 2006; Luis Medinas <metalgod@gentoo.org>
  +files/banshee-0.10.5-utilsfix.patch, banshee-0.10.5.ebuild:
  Added a patch from last hour fixes from upstream.

*banshee-0.10.5 (07 Feb 2006)

  07 Feb 2006; Luis Medinas <metalgod@gentoo.org> +banshee-0.10.5.ebuild:
  Version Bump.

*banshee-0.10.4 (18 Jan 2006)

  18 Jan 2006; Luis Medinas <metalgod@gentoo.org> +banshee-0.10.4.ebuild:
  Version Bump. Daap support disabled by default because it needs the cvs
  version of avahi.

*banshee-0.10.2 (23 Dec 2005)

  23 Dec 2005; Luis Medinas <metalgod@gentoo.org> -banshee-0.10.ebuild,
  +banshee-0.10.2.ebuild:
  Version Bump. This version contains support for njb audio players.

  09 Dec 2005; Luis Medinas <metalgod@gentoo.org> banshee-0.10-r1.ebuild:
  Added gst-plugins-cdparanoia dependency. Fixes bug #114994.

  09 Dec 2005; Luis Medinas <metalgod@gentoo.org> banshee-0.10-r1.ebuild:
  Fix crash without ipod use flag enabled. Closes bug #114930.

  08 Dec 2005; Herbie Hopkins <herbs@gentoo.org> banshee-0.10-r1.ebuild:
  Multilib fix.

*banshee-0.10-r1 (08 Dec 2005)

  08 Dec 2005; Luis Medinas <metalgod@gentoo.org>
  +files/banshee-0.10-AudioCdCore.cs.diff, +banshee-0.10-r1.ebuild:
  Add a patch from upstream to fix audio cd's.

  08 Dec 2005; Luis Medinas <metalgod@gentoo.org> banshee-0.10.ebuild:
  Fixing gstreamer dependencies after zaheerm changes. Fixes bug #114904.

*banshee-0.10 (07 Dec 2005)
