@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/banshee/banshee-0.10.6.ebuild,v 1.3 2006/02/13 15:30:52 metalgod Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/banshee/banshee-0.10.6.ebuild,v 1.4 2006/02/26 19:00:16 metalgod Exp $
 
 inherit eutils gnome2 mono
 
@@ -19,16 +19,16 @@ RDEPEND=">=dev-lang/mono-1.1.10
 	>=dev-dotnet/gtk-sharp-2.8.0
 	>=dev-dotnet/gnomevfs-sharp-2.8.0
 	>=dev-dotnet/gconf-sharp-2.8.0
-	=media-libs/gstreamer-0.8.11
-	=media-libs/gst-plugins-0.8.11
-	=media-plugins/gst-plugins-gnomevfs-0.8.11
-	mad? ( =media-plugins/gst-plugins-mad-0.8.11 )
-	vorbis? ( =media-plugins/gst-plugins-ogg-0.8.11
-		=media-plugins/gst-plugins-vorbis-0.8.11 )
-	flac? ( =media-plugins/gst-plugins-flac-0.8.11 )
-	aac? ( =media-plugins/gst-plugins-faad-0.8.11
+	>=media-libs/gstreamer-0.8.11
+	>=media-libs/gst-plugins-0.8.11
+	>=media-plugins/gst-plugins-gnomevfs-0.8.11
+	mad? ( >=media-plugins/gst-plugins-mad-0.8.11 )
+	vorbis? ( >=media-plugins/gst-plugins-ogg-0.8.11
+		>=media-plugins/gst-plugins-vorbis-0.8.11 )
+	flac? ( >=media-plugins/gst-plugins-flac-0.8.11 )
+	aac? ( >=media-plugins/gst-plugins-faad-0.8.11
 		>=media-libs/faad2-2.0-r4 )
-	=media-plugins/gst-plugins-cdparanoia-0.8.11
+	>=media-plugins/gst-plugins-cdparanoia-0.8.11
 	>=media-libs/musicbrainz-2.1.1
 	real? ( media-video/realplayer )
 	njb? ( >=dev-dotnet/njb-sharp-0.2.2 )
@@ -39,7 +39,7 @@ RDEPEND=">=dev-lang/mono-1.1.10
 	>=gnome-base/gnome-desktop-2.0
 	ipod? ( >=dev-dotnet/ipod-sharp-0.5.15 )
 	>=sys-apps/hal-0.5.2
-	sys-apps/dbus
+	>=sys-apps/dbus-0.60
 	>=dev-db/sqlite-3
 	>=gnome-extra/nautilus-cd-burner-2.12"
 
