@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/banshee
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/banshee/ChangeLog,v 1.14 2006/02/13 12:00:03 metalgod Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/banshee/ChangeLog,v 1.15 2006/02/26 19:00:16 metalgod Exp $
+
+  26 Feb 2006; Luis Medinas <metalgod@gentoo.org> banshee-0.10.6.ebuild:
+  Update gstreamer and dbus versions for dependencies.
 
 *banshee-0.10.6 (13 Feb 2006)
 
